crates/analyzer/tests/snapshots/errors__unexpected_return.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(\"[snippet]\", &src)"
---
error: expected function to return `()` but was `u256`
  ┌─ [snippet]:3:3
  │
3 │   return 1
  │   ^^^^^^^^


